--- a/app/index.html
+++ b/app/index.html
@@ -15,8 +15,7 @@
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <!-- build:css styles/vendor.css -->
   <!-- bower:css -->
-  <link rel="stylesheet"
-        href="bower_components/bootstrap/dist/css/bootstrap.css"/>
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css({.tmp,app}) styles/main.css -->
@@ -89,21 +88,17 @@
 <script src="bower_components/SHA-1/sha1.js"></script>
 <script src="bower_components/angulartics/src/angulartics.js"></script>
 <script src="bower_components/angulartics/src/angulartics-adobe.js"></script>
-<script
-  src="bower_components/angulartics/src/angulartics-chartbeat.js"></script>
+<script src="bower_components/angulartics/src/angulartics-chartbeat.js"></script>
 <script src="bower_components/angulartics/src/angulartics-cnzz.js"></script>
 <script src="bower_components/angulartics/src/angulartics-flurry.js"></script>
-<script
-  src="bower_components/angulartics/src/angulartics-ga-cordova.js"></script>
+<script src="bower_components/angulartics/src/angulartics-ga-cordova.js"></script>
 <script src="bower_components/angulartics/src/angulartics-ga.js"></script>
 <script src="bower_components/angulartics/src/angulartics-gtm.js"></script>
-<script
-  src="bower_components/angulartics/src/angulartics-kissmetrics.js"></script>
+<script src="bower_components/angulartics/src/angulartics-kissmetrics.js"></script>
 <script src="bower_components/angulartics/src/angulartics-mixpanel.js"></script>
 <script src="bower_components/angulartics/src/angulartics-piwik.js"></script>
 <script src="bower_components/angulartics/src/angulartics-scroll.js"></script>
-<script
-  src="bower_components/angulartics/src/angulartics-segmentio.js"></script>
+<script src="bower_components/angulartics/src/angulartics-segmentio.js"></script>
 <script src="bower_components/angulartics/src/angulartics-splunk.js"></script>
 <script src="bower_components/angulartics/src/angulartics-woopra.js"></script>
 <script src="bower_components/angulartics/src/angulartics-marketo.js"></script>
